--- a/web/web.html
+++ b/web/web.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>TranslAItion</h1>
+    <h1>TranslAI</h1>
     <form id="formulario">
         <input type="text" id="manufacturer" placeholder="Manufacturer" name="manufacturer" required>
         
