feat: auto server reload

--- a/web/forms.html
+++ b/web/forms.html
@@ -37,7 +37,7 @@
 
         <input type="text" id="target-language" placeholder="Target Language" name="target-language" >
 
-        <input type="number" id="budget" placeholder="Budget" name="budget" >
+        <input type="number" min="0" id="budget" placeholder="Budget" name="budget" >
 
         <input type="text" id="project-id" placeholder="Project ID" name="project-id" >
 
