--- a/web/web.html
+++ b/web/web.html
@@ -39,6 +39,7 @@
             <option value="saas">SaaS</option>
             <option value="biotecnologia">Biotecnology</option>
             <option value="fintech">Fintech</option>
+            <option value="hola">Hola</option>
         </select>
         
         <select id="task-type" name="task-type" required>
@@ -64,7 +65,7 @@
     <h2>Translators Available</h2>
     <div class="quality-filter">
         <label for="min-quality">Sort by minimum quality:</label>
-        <input type="number" id="min-quality" name="min-quality" min="1.0" max="10.0">
+        <input type="number" id="min-quality" name="min-quality" min="1" max="10">
         <button id="filter-quality">Filter</button>
     </div>
 
